fixed overflow issue on mobile view

--- a/resources/style/landings/pages/partners/_content.scss
+++ b/resources/style/landings/pages/partners/_content.scss
@@ -17,6 +17,7 @@
     &__text-div {
         width: 50%;
         margin-left: 50px;
+        overflow: hidden;
 
         @media screen and (max-width: 767px) {
             width: 100%;
@@ -62,6 +63,7 @@
 
     &__image-div {
         width: 50%;
+        overflow: hidden;
 
         @media screen and (max-width: 767px) {
             width: 100%;
