--- a/resources/style/landings/pages/partners/_hero.scss
+++ b/resources/style/landings/pages/partners/_hero.scss
@@ -95,5 +95,9 @@
         &:hover {
             background-color: #35ddd6;
         }
+
+        &__font-color {
+            color: #000000;
+        }
     }
 }
